# matrix-commander-rs-community

./: .gitignore  CONTRIBUTORS  Cargo.toml  README.md
.github/workflows/: release-by-label-linux.yml  release-by-label.yml  rust-by-gh.yml  test.yml
src/: base.rs  cli.rs  emoji_verify.rs  listen.rs  login.rs  main.rs  mclient.rs  output.rs  settings.rs
