# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "matrix-commander"
version = "1.0.0"
edition = "2021"
description = "simple but convenient CLI-based Matrix client app for sending and receiving"
documentation = "https://docs.rs/matrix-commander"
readme = "README.md"
homepage = "https://github.com/DimitriiTrater/matrix-commander-rs-community"
repository = "https://github.com/DimitriiTrater/matrix-commander-rs-community"
license = "GPL-3.0-or-later"
# crates.io only allows 5 keywords
keywords = ["Matrix", "cli", "command-line-tool", "tool", "messaging"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["todo.txt", ".*"]
publish = true


[dependencies]
clap = { version = "4.5", features = [
    "derive",
    "color",
    "wrap_help",
    "unicode",
] }
colored = "3.1"
directories = "6.0"
futures-util = "0.3"
json = "0.12"
matrix-sdk = { version = "0.16.0", default-features = false, features = [
    "e2e-encryption",
    "automatic-room-key-forwarding",
    "markdown",
    "anyhow",
    "bundled-sqlite",
    "sso-login",
    "rustls-tls",
] }

matrix-sdk-base = "0.16"
mime = "0.3"
mime_guess = "2.0"

regex = "1.11"
reqwest = "0.13.2"
rpassword = "7.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.45", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
update-informer = "1.2"
url = { version = "2.5", features = ["serde"] }
dirs = "6.0.0"
open = "5.3.3"
shellexpand = "3.1.2"


[dev-dependencies]
# "matrix-commander-rs" will be the Rust program
# to perform tests on async functions
tokio-test = "0.4"
# temporary files and directories for tests
tempfile = "3"
# HTTP mock server for integration tests that need a Matrix client
wiremock = "0.6"

# this is to distinguish it from "matrix-commander" which is the Python program
# For people that have both Python and Rust installed:
# "matrix-commander" will remain the Python program
[[bin]]
name = "matrix-commander-rs"
path = "src/main.rs"

# https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
[badges]
# The author wants to share it with the community but is not intending to meet anyone's particular use case.
maintenance = { status = "experimental" }


[profile.release]
strip = "symbols"
lto = true

[profile.release-tiny]
inherits = "release"
opt-level = "s"
